--- a/MediStock/Areas/Admin/Views/Order/List.cshtml
+++ b/MediStock/Areas/Admin/Views/Order/List.cshtml
@@ -1,32 +1,24 @@
-﻿@model OrderModel
+﻿@model IEnumerable<DAL.Domains.Order>
+
+@using X.PagedList.Mvc.Core;
+@using X.PagedList;
 @{
     ViewData["Title"] = "List";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
-}
 
-@{
-    if (TempData["OrderActiveMenuItem"].ToString() == "order-sidebar-id")
-    {
-        <script>
-            $(document).ready(function () {
-                $('.nav-item').removeClass("active")
-                $('#@TempData["OrderActiveMenuItem"].ToString()').parent().addClass("active");
-            });
-        </script>
-    }
 }
 
 <div class="page-inner">
     <div class="page-header">
         <h4 class="page-title">Orders</h4>
-        <button class="btn btn-primary"
+        @*<button class="btn btn-primary"
                 type="button"
                 style="position: absolute;
                        right: 34px;
                        box-shadow: 4px 4px 10px 0 rgba(0,0,0,.1),4px 4px 15px -5px rgba(21,114,232,.4)!important;"
-                onclick="window.location.href='@Url.Action("Create", "Order")'">
+                onclick="window.location.href='@Url.Action("Create", "Medicine")'">
             Add New
-        </button>
+        </button>*@
     </div>
     <div class="row">
         <div class="col-md-12">
@@ -34,18 +26,21 @@
                 <div class="form-group">
                     <div class="input-group">
                         <div class="input-group-prepend">
-                            <button class="btn btn-primary"
-                                    type="button"
-                                    style="box-shadow: 4px 4px 10px 0 rgba(0,0,0,.1),4px 4px 15px -5px rgba(21,114,232,.4)!important;">
-                                Search
-                            </button>
+                            @using (Html.BeginForm("Search", "Order", FormMethod.Post, new { @id = "searchFormID", @class = "form-group" }))
+                            {
+                                <div class="row">
+                                    <div class="col-md-4 float-right no-margin no-padding">
+                                        @Html.TextBox("searchString", null, new { @id = "searchID", @class = "form-control shadow" })
+                                    </div>
+                                    <div class="col-md-4 float-left no-margin no-padding">
+                                        <input type="submit" value="Search" onclick="validateSearch()" style="margin-left:5px;" class="btn btn-success shadow">
+                                    </div>
+                                    <div class="col-4">
+                                        <a href="@Url.Action("List","Order",new { area="Admin"})" class="btn btn-primary shadow float-right" style="margin-top:5px;">Show All</a>
+                                    </div>
+                                </div>
+                            }
                         </div>
-                        <input type="text"
-                               class="form-control col-md-6"
-                               placeholder=""
-                               aria-label=""
-                               aria-describedby="basic-addon1"
-                               style="box-shadow: 4px 4px 10px 0 rgba(0,0,0,.1),4px 4px 15px -5px rgba(21,114,232,.4)!important;">
                     </div>
                 </div>
                 <div class="card-body">
@@ -53,67 +48,76 @@
                     <table class="table mt-3">
                         <thead>
                             <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">Name</th>
+                                <th scope="col">CustomerId</th>
+                                <th scope="col">OrderTotal</th>
+                                <th scope="col">Delivery DateTime</th>
+                                <th scope="col">ShoppingCartId</th>
+                                <th scope="col">OrderStatus</th>
                                 <th scope="col">Edit</th>
                                 <th scope="col">Delete</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>Mark</td>
-                                <td>
-                                    <button class="btn btn-secondary btn-sm">Edit</button>
-                                </td>
-                                <td>
-                                    <button class="btn btn-danger btn-sm">Delete</button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>Jacob</td>
-                                <td>
-                                    <button class="btn btn-secondary btn-sm">Edit</button>
-                                </td>
-                                <td>
-                                    <button class="btn btn-danger btn-sm">Delete</button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>Larry the Bird</td>
-                                <td>
-                                    <button class="btn btn-secondary btn-sm">Edit</button>
-                                </td>
-                                <td>
-                                    <button class="btn btn-danger btn-sm">Delete</button>
-                                </td>
-                            </tr>
+                            @if (Model.Count() == 0)
+                            {
+                                <tr>
+                                    <td style="color:red;">
+                                        No Match
+                                    </td>
+                                </tr>
+                            }
+
+                            else
+                            {
+                                foreach (var order in Model)
+                                {
+                                    <tr>
+                                        <td>@order.CustomerId</td>
+                                        <td>@order.OrderTotal</td>
+                                        @*<td><img src="~/images/@medicine.PictureStr" width="88" height="106" alt="Image" asp-append-version="true" class="img-thumbnail"></td>*@
+                                        <td>@order.DeliveryDateTime</td>
+                                        <td>@order.ShoppingCartId</td>
+                                        <td>@order.OrderStatus</td>
+
+                                        <td><a href="@Url.Action("Edit", "Order", new { area = "Admin", id = order.Id })" class="btn btn-warning shadow btn-sm active" role="button" aria-pressed="true">Edit</a></td>
+                                        <td><a href="@Url.Action("Delete", "Order", new { area = "Admin", id = order.Id })" class="btn btn-danger shadow btn-sm active" role="button" aria-pressed="true" onclick="return confirmDelete()">Delete</a></td>
+
+                                    </tr>
+                                }
+                            }
                         </tbody>
                     </table>
-                    <ul class="pagination pg-success">
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Previous">
-                                <span aria-hidden="true">«</span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                        </li>
-                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Next">
-                                <span aria-hidden="true">»</span>
-                                <span class="sr-only">Next</span>
-                            </a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
+@section scripts {
+    <script type="text/javascript">
+        // Add the following code if you want the name of the file appear on select
+        $(document).ready(function () {
+            $(".form-control form-control-file").on("change", function () {
+                var fileName = $(this).val().split("\\").pop();
+                $(this).next(".btn btn-primary btn-round btn-lg").html(fileName);
+            });
+        });
+    </script>
+}
 
+
+<script>
+
+    function validateSearch() {
+        var searchString = document.forms["searchFormID"]["searchID"].value;
+        if (searchString == "") {
+            alert("Please type something in search box");
+            return false;
+        }
+    }
+
+    function confirmDelete() {
+        return confirm("Are you sure you want to Delete the selected item ?");
+    }
+</script>
 
